Enhanced the project

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  text-align: center;
+  color: #F8F7F7;
+}
+
 h1 {
     font-family: "Space Grotesk";
     text-transform: uppercase;
@@ -15,23 +20,29 @@ body {
     background-color: #121212;
   }
 
-* {
-    text-align: center;
-    color: #F8F7F7;
+ul {
+  list-style-type: none;
 }
 
-.planets {
+.card {
     display: flex;
     justify-content: space-evenly;
 }
 
-.card {
-    padding: 10px;
+.item-card {
+  border: solid plum 5px;
+  padding: 20px;
+  flex: 0 1 280px;
 }
 
 .text {
     padding-left: 40px;
     padding-right: 40px;
+}
+
+.suns {
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .star {
@@ -40,7 +51,6 @@ body {
     height: 2px;
     background-color: #FFF;
     border-radius: 50%;
-  
     animation: starMove 25s linear infinite;
   }
   
@@ -51,4 +61,4 @@ body {
     100% {
       transform: translateY(-100vh);
     }
-  }  
+  }
