--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ h1 {
     margin: 10px;
 }
 
+.intro {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
 p {
     font-family: "Rubik";
     font-size: 18px;
